--- a/.github/workflows/autoUpdateREADME.yml
+++ b/.github/workflows/autoUpdateREADME.yml
@@ -1,6 +1,8 @@
 name: Auto Update README.md
 on:
   workflow_dispatch:
+  schedule:
+    - cron: "00 00 * * 0"
 jobs:
   build:
     runs-on: ubuntu-latest
