--- a/.github/workflows/autoUpdateREADME.yml
+++ b/.github/workflows/autoUpdateREADME.yml
@@ -2,7 +2,7 @@ name: Auto Update README.md
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * 0"
 jobs:
   build:
     runs-on: ubuntu-latest
