--- a/.github/workflows/autoUpdateREADME.yml
+++ b/.github/workflows/autoUpdateREADME.yml
@@ -22,7 +22,7 @@ jobs:
                   USR=`echo "$RES" | jq -r '.user.username'`
                   LNK=`echo "$RES" | jq -r '.links.html'`
                   TDY=`date +'%d/%m/%Y'`
-                  TAG='<img src=\"'$URL'/&fm=jpg&crop=faces&fit=crop&h=540&w=1920\"/><sup>Photo by ['$USR']('$LNK') on [Unsplash](https://unsplash.com). Last updated: ['$TDY'](https://github.com/baradghimire/baradghimire/blob/main/.github/workflows/autoUpdateREADME.yml)</sup>'
+                  TAG='<img src=\"'$URL'/&fm=jpg&crop=faces&fit=crop&h=540&w=1920\"/><sup>Photo by ['$USR']('$LNK') on [Unsplash](https://unsplash.com). Last updated: ['$TDY'](https://github.com/baradghimire/baradghimire/blob/main/.github/workflows/autoUpdateREADME.yml). (Hint: [⭐️ Star](https://github.com/baradghimire/baradghimire) this repo to force an update)</sup>'
                   HDR=$(sed 's|&|\\&|g' <<< $TAG)
                   sed -i "1s~.*~$HDR~" README.md
             - name: Git add, commit, push
