--- a/.github/workflows/autoUpdateREADME.yml
+++ b/.github/workflows/autoUpdateREADME.yml
@@ -11,21 +11,21 @@ jobs:
             GITHUB_ACTOR: ${{ github.actor }}
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             UNSPLASH_TOKEN: ${{ secrets.UNSPLASH_TOKEN }}
-            steps:
-                - uses: actions/checkout@v2
-                - name: Update README.md
-                  run: |
-                      RESPONSE=`curl -s -X GET https://api.unsplash.com/photos/random/?query=nature -H "Authorization: Client-ID $UNSPLASH_TOKEN"`
-                      URL=`echo "$RESPONSE" | jq -r '.urls.raw'`
-                      ACTOR=$GITHUB_ACTOR
-                      TODAY=`date +'%d/%m/%Y'`
-                      TAG='<img src=\"'$URL'/&fm=jpg&crop=faces&fit=crop&h=540&w=1920\"/>⭐️ Star this repo to update cover image. Last updated by '$ACTOR' on '$TODAY
-                      FINAL=$(sed 's|&|\\&|g' <<< $TAG)
-                      sed -i "1s~.*~$FINAL~" README.md
-                - name: Git add, commit, push
-                  run: |
-                      git config --global user.name "baradghimire"
-                      git config --global user.email "baradghimire@gmail.com"
-                      git add README.md
-                      git commit -m "Auto update README.md `date +'%d/%m/%Y'`"
-                      git push
+        steps:
+            - uses: actions/checkout@v2
+            - name: Update README.md
+              run: |
+                  RESPONSE=`curl -s -X GET https://api.unsplash.com/photos/random/?query=nature -H "Authorization: Client-ID $UNSPLASH_TOKEN"`
+                  URL=`echo "$RESPONSE" | jq -r '.urls.raw'`
+                  ACTOR=`$GITHUB_ACTOR`
+                  TODAY=`date +'%d/%m/%Y'`
+                  TAG='<img src=\"'$URL'/&fm=jpg&crop=faces&fit=crop&h=540&w=1920\"/>⭐️ Star this repo to update cover image. Last updated by '$ACTOR' on '$TODAY
+                  FINAL=$(sed 's|&|\\&|g' <<< $TAG)
+                  sed -i "1s~.*~$FINAL~" README.md
+            - name: Git add, commit, push
+              run: |
+                  git config --global user.name "baradghimire"
+                  git config --global user.email "baradghimire@gmail.com"
+                  git add README.md
+                  git commit -m "Auto update README.md `date +'%d/%m/%Y'`"
+                  git push
