--- a/.github/workflows/autoUpdateREADME.yml
+++ b/.github/workflows/autoUpdateREADME.yml
@@ -19,7 +19,7 @@ jobs:
                   URL=`echo "$RESPONSE" | jq -r '.urls.raw'`
                   ACTOR=$GITHUB_ACTOR
                   TODAY=`date +'%d/%m/%Y'`
-                  TAG='<img src=\"'$URL'/&fm=jpg&crop=faces&fit=crop&h=540&w=1920\"/>⭐️ Star this repo to update cover image. Last updated by '$ACTOR' on '$TODAY
+                  TAG='<img src=\"'$URL'/&fm=jpg&crop=faces&fit=crop&h=540&w=1920\"/>⭐️ [Star](https://github.com/baradghimire/baradghimire) this repo to update header image. Last starred by ['$ACTOR'](https://github.com/'$ACTOR') on ['$TODAY'](https://github.com/baradghimire/baradghimire/actions)'
                   FINAL=$(sed 's|&|\\&|g' <<< $TAG)
                   sed -i "1s~.*~$FINAL~" README.md
             - name: Git add, commit, push
